--- a/home.html
+++ b/home.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>hello from home page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At optio quae totam id exercitationem non atque rerum repellat quasi? Vel perferendis esse velit assumenda corporis. Velit alias similique aperiam modi explicabo doloremque beatae? Veritatis dolorum labore ipsam, a quidem neque consectetur asperiores fugit quia molestias eveniet officiis illum natus animi maiores fuga, facere aliquid. Commodi est corporis voluptas veritatis beatae esse.</p>
+    
 </body>
 </html>
